--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="mailto:jacobyeung01@gmail.com">Email</a> &nbsp/&nbsp
           <!-- <a href="https://scholar.google.com/citations?hl=en&user=LBEIm8gAAAAJ">Google Scholar</a> &nbsp/&nbsp -->
           <a href="https://github.com/jacobyeung">Github</a> &nbsp/&nbsp
-          <a href="files/Jacob Yeung CV.pdf">CV</a> &nbsp/&nbsp
+          <!-- <a href="files/Jacob Yeung CV.pdf">CV</a> &nbsp/&nbsp -->
           <a href="https://www.linkedin.com/in/jacobyeung/">LinkedIn</a>
         </p>
       </td>
@@ -82,33 +82,6 @@
 
     <tr>
       <td style="padding:20px;width:40%;vertical-align:middle">
-        <!-- <img src='images/animal_reid_medium.jpeg' width="100%"> -->
-        <a href="images/animal_reid.png"><img src="images/animal_reid Medium.jpeg" width="100%" class="thumbnail" alt="animal reid photo"></a>
-      </td>
-      <td style="padding:20px;width:60%;vertical-align:middle">
-        <papertitle>Animal Re-ID & Census from Camera Traps</papertitle>
-        <br>
-        <strong>Jacob Yeung</strong>,
-        <a href="https://medhini.github.io/">Medhini Narasimhan</a>,
-        <a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a>,
-        <a href="https://people.eecs.berkeley.edu/~cjrd/">Colorado Reed</a>,
-        <a href="https://nigeria.wcs.org/About-Us/Staff/ProjectId/445.aspx">Andrew Dunn</a>,
-        <a href="https://nigeria.wcs.org/About-Us/Staff/ProjectId/448.aspx">Inaoyom Imong</a>
-        <br>
-        <em>Google AI for Social Good Workshop</em>, 2022
-        <br>
-        <a href="javascript:toggleblock('animal reid')">description</a> /
-        <a href="https://drive.google.com/file/d/1ozsAl0Rh43x83dIkeQyTeS3wplfy1TA0/view?usp=sharing">pdf</a> /
-        <a href="https://drive.google.com/file/d/1KHQj7yLny-5Z_lcAie6FVomq502RZRpl/view?usp=share_link">presentation</a>
-
-        <p align="justify"> <i id="animal reid">
-          We generate pseudo-labels and identify subsets of images for annotation using self-supervised learning.</i></p>
-        <p></p>
-      </td>
-    </tr>
-
-    <tr>
-      <td style="padding:20px;width:40%;vertical-align:middle">
         <!-- <img src='images/hangul_fonts.png' width="100%"> -->
         <a href="images/hangul_fonts.png"><img src="images/hangul_fonts Small.jpeg"  width="100%" class="thumbnail" alt="hangul fonts photo"></a>
       </td>
@@ -131,26 +104,6 @@
       </td>
     </tr>
 
-    <tr>
-      <td style="padding:20px;width:40%;vertical-align:middle">
-        <!-- <img src='images/deepchrome 2.png' width="100%"> -->
-        <a href="images/deepchrome 2.png"><img src="images/deepchrome 2 Small.jpeg"  width="100%" class="thumbnail" alt="deepchrome 2 photo"></a>
-      </td>
-      <td style="padding:20px;width:60%;vertical-align:middle">
-        <papertitle>DeepChrome 2.0: Investigating and Improving Architectures, Visualizations, & Experiments</papertitle>
-        <br>
-        <a href="https://www.sauravkadavath.com/">Saurav Kadavath*</a>,
-        Sam Paradis*,
-        <strong>Jacob Yeung*</strong>
-        <br>
-        <a href="javascript:toggleblock('deepchrome 2.0')">description</a> /
-        <a href="https://arxiv.org/abs/2209.11923">pdf</a> /
-        <a href="https://drive.google.com/file/d/1DcMLd3LP8w5bcpoDAbk76xKIFsbsJxJw/view?usp=sharing">presentation</a>
-
-        <p align="justify"> <i id="deepchrome 2.0">We present a novel visualization technique for finding relationships among histone modifications for gene expression and find the signals learned by DeepChrome are only as informative as the average histone modification counts.</i></p>
-        <p></p>
-      </td>
-    </tr>
 
     <!-- Projects
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -223,7 +176,7 @@
         <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle;"><img src="images/lbnl Small.jpeg", width="60%", alt="lbnl logo"></td>
         <td width="80%" valign="left">
           <b>Lawrence Berkeley National Laboratory</b>
-          <br> Aug 2020 - Present
+          <br> Aug 2020 - July 2023
           <br>
           <br> <b>Research Intern</b>
           <br> Advisor: Dr. <a href="https://bouchardlab.lbl.gov/people/">Kristofer Bouchard</a> and Dr. <a href="https://jihyunbak.github.io/">Ji Hyun Bak</a>
@@ -239,7 +192,7 @@
         <br>
         <p style="text-align:right;font-size:small;">
           <a href="https://github.com/jonbarron/website">Cloned from here!</a>
-          <br> Last updated: Aug 5, 2023
+          <br> Last updated: Sep 13, 2023
         </p>
       </td>
     </tr>
