--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p style="text-align:center">
           <name>Jacob Yeung</name>
         </p>
-        <p>Hello! I am a 1<sup>st</sup> year Ph.D. student in <a href="https://www.cmu.edu/ni/academics/pnc/">Neural Computation</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a> supported by an NSF Graduate Research Fellowship.
+        <p>Hello! I am a second-year Ph.D. student in the <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">Neural Computation & Machine Learning</a> joint Ph.D. program at <a href="https://www.cmu.edu/">Carnegie Mellon University</a> supported by an NSF Graduate Research Fellowship. I am advised by Prof. <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael Tarr</a>.
         </p>
         <p>
           My primary interests lie in understanding how vision can be used to guide motor behavior and using inspiration from biology towards improving computational models. To this end, my recent research explores subspace identification in neural and behavioral data, and self-supervised learning for images.
@@ -54,6 +54,30 @@
     </tr>
     </tbody></table>
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+    <tr>
+      <td style="padding:20px;width:40%;vertical-align:middle">
+        <!-- <img src='images/edca_formulation.png' width="100%"> -->
+        <a href="images/brain-nerds.png"><img src="images/brain-nerds compressed.png" width="100%" class="thumbnail" alt="brain-nerds photo"></a>
+      </td>
+      <td style="padding:20px;width:60%;vertical-align:middle">
+        <papertitle>Neural Representations of Dynamic Visual Stimuli</papertitle>
+        <br>
+        <strong>Jacob Yeung</strong>,
+        <a href="https://www.cs.cmu.edu/~afluo/">Andrew F. Luo</a>,
+        <a href="https://gabesarch.me/">Gabriel Sarch</a>,
+        <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>,
+        <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>,
+        <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
+        <br>
+        <em>Arxiv</em>, 2023 (in submission)
+        <br>
+        <a href="javascript:toggleblock('brain-nerds')">description</a> /
+        <a href="https://arxiv.org/abs/2406.02659">pdf</a>
+        <p align="justify"> <i id="brain-nerds">We propose a way to study visual motion in the brain by decoupling the modeling of static image representations and motion representations in the human brain.</i></p>
+        <p></p>
+      </td>
+    </tr>
 
     <tr>
       <td style="padding:20px;width:40%;vertical-align:middle">
