removed experience section and updated last updated

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <p style="text-align:center">
           <name>Jacob Yeung</name>
         </p>
-        <p>Hello! I am a second-year Ph.D. student in the <a href="https://www.ml.cmu.edu/academics/joint-ml-phd.html">Neural Computation & Machine Learning</a> joint Ph.D. program at <a href="https://www.cmu.edu/">Carnegie Mellon University</a> supported by an NSF Graduate Research Fellowship. I am advised by Prof. <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael Tarr</a>.
+        <p>Hello! I am a second-year Ph.D. student in the <a href="https://www.cmu.edu/ni/index.html">Neural Computation</a> & <a href="https://www.ml.cmu.edu/">Machine Learning</a> <a href="https://www.cmu.edu/ni/academics/pnc/pnc-machine-learning.html">joint Ph.D. program</a> at Carnegie Mellon University supported by an NSF Graduate Research Fellowship. I am advised by Prof. <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael Tarr</a>.
         </p>
         <p>
-          My primary interests lie in understanding how vision can be used to guide motor behavior and using inspiration from biology towards improving computational models. To this end, my recent research explores subspace identification in neural and behavioral data, and self-supervised learning for images.
+          My primary interests lie in understanding how vision can be used to guide motor behavior and using inspiration from biology towards improving computational models.
         </p>
         <p>
-          I recently graduated with a B.S. in Electrical Engineering and Computer Science (EECS) from <a href="https://www.berkeley.edu/">UC Berkeley</a>. My research was advised by Dr. <a href="https://bouchardlab.lbl.gov/">Kristofer Bouchard</a> and Dr. <a href="https://jihyunbak.github.io/">Ji Hyun Bak</a> at the Lawrence Berkeley National Laboratory. I also worked with <a href="https://medhini.github.io/">Medhini Narasimhan</a> and Prof. <a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a> at Berkeley AI Research <a href="https://bair.berkeley.edu/">(BAIR)</a>. 
+          I graduated with a B.S. in Electrical Engineering and Computer Science (EECS) from <a href="https://www.berkeley.edu/">UC Berkeley</a>. My research was advised by Dr. <a href="https://bouchardlab.lbl.gov/">Kristofer Bouchard</a> and Dr. <a href="https://jihyunbak.github.io/">Ji Hyun Bak</a> at the Lawrence Berkeley National Laboratory. I also worked with <a href="https://medhini.github.io/">Medhini Narasimhan</a> and Prof. <a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a> at Berkeley AI Research <a href="https://bair.berkeley.edu/">(BAIR)</a>. 
         </p>
         <p style="text-align:center">
           <a href="mailto:jacobyeung01@gmail.com">Email</a> &nbsp/&nbsp
@@ -72,8 +72,8 @@
         <br>
         <em>Arxiv</em>, 2023 (in submission)
         <br>
-        <a href="javascript:toggleblock('brain-nerds')">description</a> /
-        <a href="https://arxiv.org/abs/2406.02659">pdf</a>
+        <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
+        <a href="https://arxiv.org/abs/2406.02659">Paper</a>
         <p align="justify"> <i id="brain-nerds">We propose a way to study visual motion in the brain by decoupling the modeling of static image representations and motion representations in the human brain.</i></p>
         <p></p>
       </td>
@@ -93,9 +93,9 @@
         <br>
         <em>COSYNE</em>, 2023
         <br>
-        <a href="javascript:toggleblock('edca')">description</a> /
-        <a href="https://drive.google.com/file/d/1HSfNB6wTZyhhPmOAmMiYnphoN0_wXnHi/view?usp=sharing">pdf</a> /
-        <a href="https://drive.google.com/file/d/1JuYdr8oeTA5khhaVKltDLh7Aq-U8WuwD/view?usp=share_link">poster</a>
+        <!-- <a href="javascript:toggleblock('edca')">description</a> / -->
+        <a href="https://drive.google.com/file/d/1HSfNB6wTZyhhPmOAmMiYnphoN0_wXnHi/view?usp=sharing">Paper</a> /
+        <a href="https://drive.google.com/file/d/1JuYdr8oeTA5khhaVKltDLh7Aq-U8WuwD/view?usp=share_link">Poster</a>
 
         <p align="justify"> <i id="edca">We introduce external Dynamics Components Analysis
           (eDCA), a linear dimensionality reduction method that finds subspaces of past neural data that have maximal mutual
@@ -119,8 +119,8 @@
         <br>
         <em>International Conference on Image Analysis and Processing</em>, 2022
         <br>
-        <a href="javascript:toggleblock('hangul fonts')">description</a> /
-        <a href="https://arxiv.org/abs/1905.13308v2">pdf</a>
+        <!-- <a href="javascript:toggleblock('hangul fonts')">description</a> / -->
+        <a href="https://arxiv.org/abs/1905.13308v2">Paper</a>
 
         <p align="justify"> <i id="hangul fonts">
           We introduce a dataset with known hierarchical and compositional structure and show deep unsupervised models poorly learn the latent generative structures.</i></p>
@@ -178,37 +178,6 @@
     </table>
 
 
-    <!-- Education -->
-    <table class="left"><tbody>
-      <tr>
-        <td>
-          <heading>Experience</heading>
-        </td>
-      </tr>
-      </tbody></table>
-      <table width="70%" align="left" border="0" cellpadding="10"><tbody>
-      <tr>
-        <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle"><img src="images/ucb.png", width="60%", alt="berkeley logo"></td>
-        <td width="80%" valign="center" >
-          <b>University of California, Berkeley</b>
-          <br> Aug 2018 - Dec 2022
-          <br>
-          <br> <b>B.S. in Electrical Engineering and Computer Science</b>
-        </td>
-      </tr>
-      <tr>
-        <td style="padding-left:20px;padding-right:20px;width:35%;vertical-align:middle;"><img src="images/lbnl Small.jpeg", width="60%", alt="lbnl logo"></td>
-        <td width="80%" valign="left">
-          <b>Lawrence Berkeley National Laboratory</b>
-          <br> Aug 2020 - July 2023
-          <br>
-          <br> <b>Research Intern</b>
-          <br> Advisor: Dr. <a href="https://bouchardlab.lbl.gov/people/">Kristofer Bouchard</a> and Dr. <a href="https://jihyunbak.github.io/">Ji Hyun Bak</a>
-        </td>
-      </tr>
-      </tbody></table>
-
-
 
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr>
@@ -216,7 +185,7 @@
         <br>
         <p style="text-align:right;font-size:small;">
           <a href="https://github.com/jonbarron/website">Cloned from here!</a>
-          <br> Last updated: Sep 13, 2023
+          <br> Last updated: July 10, 2024
         </p>
       </td>
     </tr>
