--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
           <p>
           <p style="font-size:18px">I have been a teaching assistant for the following course:</p>
           <ul>
+            <li><a href="https://www.cs.cmu.edu/~pradeepr/716/">
+              <papertitle>Advanced Machine Learning (10716) - Spring 2025</papertitle>
+            </a>
+            </li>
             <li><a href="https://www2.eecs.berkeley.edu/Courses/EE122/">
                 <papertitle>Introduction to Network Communications (EE 122) - Spring 2022</papertitle>
               </a></li>
