updated interests and changed date

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Hello! I am a second-year Ph.D. student in the <a href="https://www.cmu.edu/ni/index.html">Neural Computation</a> & <a href="https://www.ml.cmu.edu/">Machine Learning</a> <a href="https://www.cmu.edu/ni/academics/pnc/pnc-machine-learning.html">joint Ph.D. program</a> at Carnegie Mellon University supported by an NSF Graduate Research Fellowship. I am advised by Prof. <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael Tarr</a>.
         </p>
         <p>
-          My primary interests lie in understanding how vision can be used to guide motor behavior and using inspiration from biology towards improving computational models.
+          My primary interests lie in understanding how humans understand dynamic visual stimuli and improving dynamic visual reasoning in vision-language models.
         </p>
         <p>
           I graduated with a B.S. in Electrical Engineering and Computer Science (EECS) from <a href="https://www.berkeley.edu/">UC Berkeley</a>. My research was advised by Dr. <a href="https://bouchardlab.lbl.gov/">Kristofer Bouchard</a> and Dr. <a href="https://jihyunbak.github.io/">Ji Hyun Bak</a> at the Lawrence Berkeley National Laboratory. I also worked with <a href="https://medhini.github.io/">Medhini Narasimhan</a> and Prof. <a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a> at Berkeley AI Research <a href="https://bair.berkeley.edu/">(BAIR)</a>. 
@@ -151,7 +151,7 @@
       <tr>
         <td width="75%" valign="center">
           <p>
-          <p style="font-size:18px">I have been a teaching assistant for the following course:</p>
+          <p style="font-size:18px">I have been a teaching assistant for the following courses:</p>
           <ul>
             <li><a href="https://www.cs.cmu.edu/~pradeepr/716/">
               <papertitle>Advanced Machine Learning (10716) - Spring 2025</papertitle>
@@ -189,7 +189,7 @@
         <br>
         <p style="text-align:right;font-size:small;">
           <a href="https://github.com/jonbarron/website">Cloned from here!</a>
-          <br> Last updated: July 10, 2024
+          <br> Last updated: January 20, 2025
         </p>
       </td>
     </tr>
