--- a/index.html
+++ b/index.html
@@ -70,11 +70,35 @@
         <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>,
         <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
         <br>
-        <em>Arxiv</em>, 2023 (in submission)
+        <em>Arxiv</em>, 2024 (in submission)
         <br>
         <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
         <a href="https://arxiv.org/abs/2406.02659">Paper</a>
         <p align="justify"> <i id="brain-nerds">We propose a way to study visual motion in the brain by decoupling the modeling of static image representations and motion representations in the human brain.</i></p>
+        <p></p>
+      </td>
+    </tr>
+
+    <tr>
+      <td style="padding:20px;width:40%;vertical-align:middle">
+        <!-- <img src='images/edca_formulation.png' width="100%"> -->
+        <a href="images/brainsail_teaser.png"><img src="images/brainsail_teaser.png" width="100%" class="thumbnail" alt="brainsail photo"></a>
+      </td>
+      <td style="padding:20px;width:60%;vertical-align:middle">
+        <papertitle>Neural Representations of Dynamic Visual Stimuli</papertitle>
+        <br>
+        <a href="https://www.cs.cmu.edu/~afluo/">Andrew F. Luo</a>,
+        <strong>Jacob Yeung</strong>,
+        Rushikesh Zawar, Shaurya Dewan,
+        <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>,
+        <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>,
+        <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
+        <br>
+        <em>Arxiv</em>, 2024 (in submission)
+        <br>
+        <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
+        <a href="https://arxiv.org/abs/2410.05266">Paper</a>
+        <p align="justify"> <i id="brain-nerds">We propose an efficient gradient-free distillation module capable of extraction high quality dense CLIP embeddings, and utilize these embeddings to understand semantic selectivity in the visual cortex.</i></p>
         <p></p>
       </td>
     </tr>
