added iclr, removed italics, updated research interest

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Hello! I am a second-year Ph.D. student in the <a href="https://www.cmu.edu/ni/index.html">Neural Computation</a> & <a href="https://www.ml.cmu.edu/">Machine Learning</a> <a href="https://www.cmu.edu/ni/academics/pnc/pnc-machine-learning.html">joint Ph.D. program</a> at Carnegie Mellon University supported by an NSF Graduate Research Fellowship. I am advised by Prof. <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael Tarr</a>.
         </p>
         <p>
-          My primary interests lie in understanding how humans understand dynamic visual stimuli and improving dynamic visual reasoning in vision-language models.
+          My primary interests lie in understanding how humans understand dynamic visual stimuli and improving machine visual reasoning.
         </p>
         <p>
           I graduated with a B.S. in Electrical Engineering and Computer Science (EECS) from <a href="https://www.berkeley.edu/">UC Berkeley</a>. My research was advised by Dr. <a href="https://bouchardlab.lbl.gov/">Kristofer Bouchard</a> and Dr. <a href="https://jihyunbak.github.io/">Ji Hyun Bak</a> at the Lawrence Berkeley National Laboratory. I also worked with <a href="https://medhini.github.io/">Medhini Narasimhan</a> and Prof. <a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a> at Berkeley AI Research <a href="https://bair.berkeley.edu/">(BAIR)</a>. 
@@ -74,7 +74,7 @@
         <br>
         <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
         <a href="https://arxiv.org/abs/2406.02659">Paper</a>
-        <p align="justify"> <i id="brain-nerds">We propose a way to study visual motion in the brain by decoupling the modeling of static image representations and motion representations in the human brain.</i></p>
+        <p align="justify"> We propose a way to study visual motion in the brain by decoupling the modeling of static image representations and motion representations in the human brain.</p>
         <p></p>
       </td>
     </tr>
@@ -94,11 +94,11 @@
         <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>,
         <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
         <br>
-        <em>Arxiv</em>, 2024 (in submission)
+        <em>ICLR 2025</em>
         <br>
         <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
         <a href="https://arxiv.org/abs/2410.05266">Paper</a>
-        <p align="justify"> <i id="brain-nerds">We propose an efficient gradient-free distillation module capable of extraction high quality dense CLIP embeddings, and utilize these embeddings to understand semantic selectivity in the visual cortex.</i></p>
+        <p align="justify"> We propose an efficient gradient-free distillation module capable of extraction high quality dense CLIP embeddings, and utilize these embeddings to understand semantic selectivity in the visual cortex.</p>
         <p></p>
       </td>
     </tr>
@@ -121,9 +121,9 @@
         <a href="https://drive.google.com/file/d/1HSfNB6wTZyhhPmOAmMiYnphoN0_wXnHi/view?usp=sharing">Paper</a> /
         <a href="https://drive.google.com/file/d/1JuYdr8oeTA5khhaVKltDLh7Aq-U8WuwD/view?usp=share_link">Poster</a>
 
-        <p align="justify"> <i id="edca">We introduce external Dynamics Components Analysis
+        <p align="justify"> We introduce external Dynamics Components Analysis
           (eDCA), a linear dimensionality reduction method that finds subspaces of past neural data that have maximal mutual
-          information with subspaces of future behavior data.</i></p>
+          information with subspaces of future behavior data.</p>
         <p></p>
       </td>
     </tr>
@@ -146,8 +146,8 @@
         <!-- <a href="javascript:toggleblock('hangul fonts')">description</a> / -->
         <a href="https://arxiv.org/abs/1905.13308v2">Paper</a>
 
-        <p align="justify"> <i id="hangul fonts">
-          We introduce a dataset with known hierarchical and compositional structure and show deep unsupervised models poorly learn the latent generative structures.</i></p>
+        <p align="justify">
+          We introduce a dataset with known hierarchical and compositional structure and show deep unsupervised models poorly learn the latent generative structures.</p>
         <p></p>
       </td>
     </tr>
@@ -213,7 +213,7 @@
         <br>
         <p style="text-align:right;font-size:small;">
           <a href="https://github.com/jonbarron/website">Cloned from here!</a>
-          <br> Last updated: January 20, 2025
+          <br> Last updated: January 24, 2025
         </p>
       </td>
     </tr>
