--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
       </td>
       <td style="padding:2.5%;width:30%;max-width:30%">
-        <a href="images/avatar.jpeg"><img style="width:95%;max-width:95%;border-radius:50%;" alt="profile photo" src="images/avatar Small.jpeg" class="hoverZoomLink"></a>
+        <a href="images/avatar.jpg"><img style="width:95%;max-width:95%;border-radius:50%;" alt="profile photo" src="images/avatar Small.jpeg" class="hoverZoomLink"></a>
       </td>
     </tr>
     </tbody></table>
