--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a href="images/brain-nerds.png"><img src="images/brain-nerds compressed.png" width="100%" class="thumbnail" alt="brain-nerds photo"></a>
       </td>
       <td style="padding:20px;width:60%;vertical-align:middle">
-        <papertitle>Neural Representations of Dynamic Visual Stimuli</papertitle>
+        <papertitle>Reanimating Images using Neural Representations of Dynamic Stimuli</papertitle>
         <br>
         <strong>Jacob Yeung</strong>,
         <a href="https://www.cs.cmu.edu/~afluo/">Andrew F. Luo</a>,
@@ -70,7 +70,7 @@
         <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>,
         <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
         <br>
-        <em>Arxiv</em>, 2024 (in submission)
+        <em>CVPR 2025</em>
         <br>
         <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
         <a href="https://arxiv.org/abs/2406.02659">Paper</a>
@@ -213,7 +213,7 @@
         <br>
         <p style="text-align:right;font-size:small;">
           <a href="https://github.com/jonbarron/website">Cloned from here!</a>
-          <br> Last updated: January 24, 2025
+          <br> Last updated: February 26, 2025
         </p>
       </td>
     </tr>
