changed andrew's site

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <papertitle>Reanimating Images using Neural Representations of Dynamic Stimuli</papertitle>
         <br>
         <strong>Jacob Yeung</strong>,
-        <a href="https://www.cs.cmu.edu/~afluo/">Andrew F. Luo</a>,
+        <a href="https://andrewluo.net/">Andrew F. Luo</a>,
         <a href="https://gabesarch.me/">Gabriel Sarch</a>,
         <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>,
         <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>,
@@ -87,7 +87,7 @@
       <td style="padding:20px;width:60%;vertical-align:middle">
         <papertitle>Neural Representations of Dynamic Visual Stimuli</papertitle>
         <br>
-        <a href="https://www.cs.cmu.edu/~afluo/">Andrew F. Luo</a>,
+        <a href="https://andrewluo.net/">Andrew F. Luo</a>,
         <strong>Jacob Yeung</strong>,
         Rushikesh Zawar, Shaurya Dewan,
         <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>,
