added mscv student

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <br>
         <a href="https://andrewluo.net/">Andrew F. Luo</a>,
         <strong>Jacob Yeung</strong>,
-        Rushikesh Zawar, Shaurya Dewan,
+        <a href="https://github.com/RBZ-99">Rushikesh Zawar</a>, <a href="https://srdewan.github.io/">Shaurya Dewan</a>,
         <a href="https://www.maggie-henderson.com/">Margaret M. Henderson</a>,
         <a href="https://www.cs.cmu.edu/~lwehbe/">Leila Wehbe</a>,
         <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
