--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <a href="images/brain-nerds.png"><img src="images/brain-nerds compressed.png" width="100%" class="thumbnail" alt="brain-nerds photo"></a>
       </td>
       <td style="padding:20px;width:60%;vertical-align:middle">
-        <papertitle>Reanimating Images using Neural Representations of Dynamic Stimuli</papertitle>
+        <a href="https://arxiv.org/abs/2406.02659" id="brainnerd">
+            <papertitle>Reanimating Images using Neural Representations of Dynamic Stimuli</papertitle>
+        </a>
         <br>
         <strong>Jacob Yeung</strong>,
         <a href="https://andrewluo.net/">Andrew F. Luo</a>,
@@ -73,7 +75,7 @@
         <em>CVPR 2025</em>
         <br>
         <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
-        <a href="https://arxiv.org/abs/2406.02659">Paper</a>
+        <a href="https://arxiv.org/abs/2406.02659">Paper</a> / <a href="data/BrainNerds_bib.html">bibtex</a>
         <p align="justify"> We propose a way to study visual motion in the brain by decoupling the modeling of static image representations and motion representations in the human brain.</p>
         <p></p>
       </td>
@@ -85,7 +87,9 @@
         <a href="images/brainsail_teaser.png"><img src="images/brainsail_teaser.png" width="100%" class="thumbnail" alt="brainsail photo"></a>
       </td>
       <td style="padding:20px;width:60%;vertical-align:middle">
-        <papertitle>Neural Representations of Dynamic Visual Stimuli</papertitle>
+        <a href="https://arxiv.org/abs/2410.05266" id="brainsail">
+          <papertitle>Brain Mapping with Dense Features: Grounding Cortical Semantic Selectivity in Natural Images With Vision Transformers</papertitle>
+        </a>
         <br>
         <a href="https://andrewluo.net/">Andrew F. Luo</a>,
         <strong>Jacob Yeung</strong>,
@@ -97,7 +101,7 @@
         <em>ICLR 2025</em>
         <br>
         <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
-        <a href="https://arxiv.org/abs/2410.05266">Paper</a>
+        <a href="https://arxiv.org/abs/2410.05266">Paper</a> / <a href="data/BrainSAIL_bib.html">bibtex</a>
         <p align="justify"> We propose an efficient gradient-free distillation module capable of extraction high quality dense CLIP embeddings, and utilize these embeddings to understand semantic selectivity in the visual cortex.</p>
         <p></p>
       </td>
@@ -109,7 +113,9 @@
         <a href="images/edca_formulation.png"><img src="images/edca_formulation Small.png" width="100%" class="thumbnail" alt="edca formulation photo"></a>
       </td>
       <td style="padding:20px;width:60%;vertical-align:middle">
-        <papertitle>Discovery of Linked Neural and Behavioral Subspaces with External Dynamic Components Analysis</papertitle>
+        <a href="https://drive.google.com/file/d/1HSfNB6wTZyhhPmOAmMiYnphoN0_wXnHi/view" id="edca">
+          <papertitle>Discovery of Linked Neural and Behavioral Subspaces with External Dynamic Components Analysis</papertitle>
+        </a>
         <br>
         <strong>Jacob Yeung</strong>,
         <a href="https://jihyunbak.github.io/">Ji Hyun Bak</a>,
@@ -134,7 +140,9 @@
         <a href="images/hangul_fonts.png"><img src="images/hangul_fonts Small.jpeg"  width="100%" class="thumbnail" alt="hangul fonts photo"></a>
       </td>
       <td style="padding:20px;width:60%;vertical-align:middle">
-        <papertitle>Hangul Fonts Dataset: a Hierarchical and Compositional Dataset for Investigating Learned Representations</papertitle>
+        <a href="https://arxiv.org/abs/1905.13308v2" id="hangul">
+          <papertitle>Hangul Fonts Dataset: a Hierarchical and Compositional Dataset for Investigating Learned Representations</papertitle>
+        </a>
         <br>
         <a href="https://jesselivezey.com/">Jesse Livezey</a>,
         Ahyeon Hwang,
@@ -144,7 +152,7 @@
         <em>International Conference on Image Analysis and Processing</em>, 2022
         <br>
         <!-- <a href="javascript:toggleblock('hangul fonts')">description</a> / -->
-        <a href="https://arxiv.org/abs/1905.13308v2">Paper</a>
+        <a href="https://arxiv.org/abs/1905.13308v2">Paper</a> / <a href="data/Hangul_bib.html">bibtex</a>
 
         <p align="justify">
           We introduce a dataset with known hierarchical and compositional structure and show deep unsupervised models poorly learn the latent generative structures.</p>
@@ -207,7 +215,7 @@
 
 
 
-    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr>
       <td style="padding:0px">
         <br>
@@ -217,7 +225,7 @@
         </p>
       </td>
     </tr>
-    </tbody></table>
+    </tbody></table> -->
   </td>
 </tr>
 </table>
