add deva as co-advisor

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p style="text-align:center">
           <name>Jacob Yeung</name>
         </p>
-        <p>Hello! I am a second-year Ph.D. student in the <a href="https://www.cmu.edu/ni/index.html">Neural Computation</a> & <a href="https://www.ml.cmu.edu/">Machine Learning</a> <a href="https://www.cmu.edu/ni/academics/pnc/pnc-machine-learning.html">joint Ph.D. program</a> at Carnegie Mellon University supported by an NSF Graduate Research Fellowship. I am advised by Prof. <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael Tarr</a>.
+        <p>Hello! I am a second-year Ph.D. student in the <a href="https://www.cmu.edu/ni/index.html">Neural Computation</a> & <a href="https://www.ml.cmu.edu/">Machine Learning</a> <a href="https://www.cmu.edu/ni/academics/pnc/pnc-machine-learning.html">joint Ph.D. program</a> at Carnegie Mellon University supported by an NSF Graduate Research Fellowship. I am advised by Prof. <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael Tarr</a> and Prof. <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>.
         </p>
         <p>
           My primary interests lie in understanding how humans understand dynamic visual stimuli and improving machine visual reasoning.
