small stylistic, added cloned from link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>,
         <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
         <br>
-        <span style="color:red;"><em>CVPR 2025</em> oral</span>
+        <em>CVPR 2025</em> <strong style="color:red;"> (Oral Presentation)</strong>
         <br>
         <!-- <a href="javascript:toggleblock('brain-nerds')">description</a> / -->
         <a href="https://arxiv.org/abs/2406.02659">Paper</a> / <a href="https://sites.google.com/view/neural-dynamics/home">Website</a> / <a href="data/BrainNerds_bib.html">bibtex</a>
@@ -215,17 +215,17 @@
 
 
 
-    <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr>
       <td style="padding:0px">
         <br>
         <p style="text-align:right;font-size:small;">
-          <a href="https://github.com/jonbarron/website">Cloned from here!</a>
-          <br> Last updated: February 26, 2025
+          <a href="https://jonbarron.info/">Cloned from here!</a>
+          <!-- <br> Last updated: February 26, 2025 -->
         </p>
       </td>
     </tr>
-    </tbody></table> -->
+    </tbody></table>
   </td>
 </tr>
 </table>
