--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
         <a href="https://www.cs.cmu.edu/~deva/">Deva Ramanan</a>,
         <a href="https://sites.google.com/andrew.cmu.edu/tarrlab/people/michael-j-tarr">Michael J. Tarr</a>
         <br>
-        <em>CVPR 2025</em> <strong style="color:red;"> Oral</strong><span style="color:red;">, (top 0.7% of all submissions)</span>
+        <strong style="color:red;">CVPR 2025 Oral</strong>, (top 0.7% of all submissions)</span>
         <br>
-        <a href="javascript:toggleblock('brain-nerds')">description</a> /
-        <a href="https://arxiv.org/abs/2406.02659">Paper</a> / <a href="https://sites.google.com/view/neural-dynamics/home">Website</a> / <a href="data/BrainNerds_bib.html">bibtex</a>
+        <a href="https://arxiv.org/abs/2406.02659">Paper</a> / <a href="https://brain-nrds.github.io/">Website</a> / <a href="data/BrainNerds_bib.html">bibtex</a>
         <p align="justify"> We propose a way to study visual motion in the brain by decoupling the modeling of static image representations and motion representations in the human brain.</p>
         <p></p>
       </td>
